--- a/frontend/css/list.css
+++ b/frontend/css/list.css
@@ -1,9 +1,16 @@
 .container {
-  padding: 2rem 0rem;
+    padding: 2rem 0rem;
 }
+
 h4 {
-  margin: 2rem 0rem 1rem;
+    margin: 2rem 0rem 1rem;
 }
-.table-image td, .table-image th {
-  vertical-align: middle;
+
+.table-image td,
+.table-image th {
+    vertical-align: middle;
+}
+
+nav .navbar-custom {
+    color: aqua;
 }
