--- a/frontend/css/list.css
+++ b/frontend/css/list.css
@@ -14,3 +14,9 @@ h4 {
 nav .navbar-custom {
     color: aqua;
 }
+
+.match {
+    background-color: #e5e5f7;
+    background-image: radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+    background-size: 10px 10px;
+}
